Correccion al index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <form id="form" class="formulario">
 
                 <label id="form" for="nombreUsuario">Nombre de Usuario</label>
-                <input id="form" type="text" id="nombreUsuario" placeholder="Escribir Usuario" name="uname" require>
+                <input id="form" type="text" id="nombreUsuario" placeholder="Escribir Usuario" name="uname" required>
 
                 <label id="form" for="psw">Contraseña</label>
                 <input id="form" type="password" placeholder="Ingrese Contraseña" name="psw" required>
