--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <form id="form" class="formulario">
 
                 <label id="form" for="nombreUsuario">Nombre de Usuario</label>
-                <input id="form" type="text" id="nombreUsuario" placeholder="Escribir Usuario" name="uname" required>
+                <input id="form" type="text" id="nombreUsuario" placeholder="Ingrese su Usuario" name="uname" required>
 
                 <label id="form" for="psw">Contraseña</label>
-                <input id="form" type="password" placeholder="Ingrese Contraseña" name="psw" required>
+                <input id="form" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
                 <button id="form" type="submit">Iniciar Sesión</button>
                 <label id="form">
