--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <label id="form" for="psw">Contraseña</label>
                 <input id="inPass" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
-                <input style="background-color: cadetblue;" type="button" value="Iniciar Sesion" onclick="iniciarSesion()" id="form">
+                <button id="form" type="submit" onclick="iniciarSesion()"></button>
                 <label id="form">
                     <input id="form" class="check" type="checkbox" checked="checked" name="recordar">Recordarme
                 </label>
