commit ultimo Andrey

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <label id="form" for="psw">Contraseña</label>
                 <input id="inPass" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
-                <button id="form" type="submit" onclick="iniciarSesion()"></button>
+                <button id="form" type="submit" onclick="iniciarSesion()">Iniciar Sesión</button>
                 <label id="form">
                     <input id="form" class="check" type="checkbox" checked="checked" name="recordar">Recordarme
                 </label>
