--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label id="nombreUsuario" for="inUser">Nombre de Usuario</label>
                 <input id="inUser" type="text" placeholder="Ingrese su Usuario" name="uname" required>
 
-                <label id="psw" for="psw">Contraseña</label>
+                <label id="psw" for="inPass">Contraseña</label>
                 <input id="inPass" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
                 <button id="submit" type="submit" onclick="iniciarSesion()">Iniciar Sesión</button>
