--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
             <form id="form" class="formulario">
 
-                <label id="nombreUsuario" for="inUser">Nombre de Usuario</label>
+                <label id="nombreUsuario" for="a">Nombre de Usuario</label>
                 <input id="inUser" type="text" placeholder="Ingrese su Usuario" name="uname" required>
 
-                <label id="psw" for="inPass">Contraseña</label>
+                <label id="psw" for="b">Contraseña</label>
                 <input id="inPass" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
                 <button id="submit" type="submit" onclick="iniciarSesion()">Iniciar Sesión</button>
