Principio de parte de tiquetes
se muestra una tabla del estacionamiento con los campos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
         <div class="centrarContenido">
             <input class="boton-comprar" type="button" value="Comprar Ticket">
         </div>
+        <div>
 
+            <a class="enlace" href="../Proyecto-Parking-1/php/modelo_reservas.php">Ir a la tabla</a>
+
+        </div>
         <section class="ubicacion centrarContenido">
             <h3>Ubicación y Contacto <i class="fas fa-map-marked-alt"></i></h3>
             <div class="mapa">
@@ -112,7 +116,7 @@
         </footer>
     </div>
     <script src="js/sidenav.js"></script>
-    <script src="js/controlador_Login.js" ></script>
+    <script src="js/controlador_Login.js"></script>
 </body>
 
 </html>
