--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <input id="inPass" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
                 <button id="submit" type="submit" onclick="iniciarSesion()">Iniciar Sesión</button>
+                <button id="inReg" type="submit" onclick="registrar()">Registrarse</button>
                 <label id="labelCheck">
                     <input id="checkbox" class="check" type="checkbox" checked="checked" name="recordar">Recordarme
                 </label>
@@ -87,11 +88,6 @@
 
         <div class="centrarContenido">
             <input class="boton-comprar" type="button" value="Comprar Ticket">
-        </div>
-        <div>
-
-            <a class="enlace" href="../Proyecto-Parking-1/php/modelo_reservas.php">Ir a la tabla</a>
-
         </div>
         <section class="ubicacion centrarContenido">
             <h3>Ubicación y Contacto <i class="fas fa-map-marked-alt"></i></h3>
