--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <h1><i class="fas fa-car-side"></i> Parking SJO</h1>
 
                 <nav class="menu">
-                    <a href="#">Comprar Ticket</a>
                     <a href="#" id="openSideMenu" onclick="openNav()">Iniciar Sesión</a>
                 </nav>
             </div>
@@ -87,7 +86,7 @@
         </section>
 
         <div class="centrarContenido">
-            <input class="boton-comprar" type="button" value="Comprar Ticket">
+            <input  type="button" class="boton-comprar" id="openSideMenu" onclick="openNav()" value="Reservar">
         </div>
         <section class="ubicacion centrarContenido">
             <h3>Ubicación y Contacto <i class="fas fa-map-marked-alt"></i></h3>
@@ -111,6 +110,7 @@
             <a href="#">Ayuda</a>
         </footer>
     </div>
+    
     <script src="js/sidenav.js"></script>
     <script src="js/controlador_Login.js"></script>
 </body>
