--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </section>
 
         <div class="centrarContenido">
-            <input  type="button" class="boton-comprar" id="openSideMenu" onclick="openNav()" value="Reservar">
+            <input  type="button" class="boton-comprar" id="openSideMenu" onclick="openNav()" value="Reservar Espacio">
         </div>
         <section class="ubicacion centrarContenido">
             <h3>Ubicación y Contacto <i class="fas fa-map-marked-alt"></i></h3>
