--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
                 <label id="psw" for="b">Contraseña</label>
                 <input id="inPass" type="password" placeholder="Ingrese su Contraseña" name="psw" required>
 
-                <button id="submit" type="submit" onclick="iniciarSesion()">Iniciar Sesión</button>
-                <button id="inReg" type="submit" onclick="registrar()">Registrarse</button>
-                <label id="labelCheck">
-                    <input id="checkbox" class="check" type="checkbox" checked="checked" name="recordar">Recordarme
-                </label>
+                <input id="submit" class="botonesSideNav" type="submit" onclick="iniciarSesion()" value="Iniciar sesion">
+                <input id="inReg" class="botonesSideNav" type="submit" onclick="registrar()" value="Registrarse">
+
             </form>
         </div>
         <div class="fondo">
